Fix text alignment for RTL messages (#2597)

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -446,12 +446,13 @@
   color: $color-light-90;
   font-size: 14px;
   line-height: 18px;
+  text-align: start;
 
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
   white-space: pre-wrap;
-
+  
   a {
     text-decoration: underline;
     color: $color-light-90;
